<resources>
    <string name="app_name">Rscout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="checkingNetwork">There is an error in network</string>
    <string name="server_error">The server could not be found. Please try again after some time!</string>
    <string name="connection_error">Cannot connect to Internet&#8230;Please check your connection!</string>
    <string name="parsing_error">Parsing error! Please try again after some time!</string>
    <string name="time_out">Connection TimeOut! Please check your internet connection.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="wrong_login">Invalid Credentials</string>
    <string name="search">Search by code</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="logout">Logout</string>
</resources>
