<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionView"
        android:text="Question goes here?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <RadioGroup
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.5"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/yes"
            android:id="@+id/radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="17sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/no"
            android:id="@+id/radioButton2"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="17sp"
            android:layout_weight="0.5"
            android:layout_marginEnd="3dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/na"
            android:id="@+id/radioButton3"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textSize="17sp"
            android:layout_weight="0.5"
            android:layout_marginEnd="3dp"/>

    </RadioGroup>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorAccent"/>


</LinearLayout>