
<LinearLayout
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.5"
        android:id="@+id/radioGroup"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RadioButton
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/answer"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="12sp" />

        <RadioButton
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/answer"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/radioButton2"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="12sp"
            android:layout_weight="0.5" />

        <RadioButton
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/answer"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:id="@+id/radioButton3"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textSize="12sp"
            android:layout_weight="0.5"/>

    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorAccent"/>

</LinearLayout>